--- a/src/elements/ami-viewer-2d.html
+++ b/src/elements/ami-viewer-2d.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
+<link rel="import" href="../../bower_components/moment-element/moment-element.html">
 <link rel="import" href="../import-ami.html">
 
 <dom-module id="ami-viewer-2d">
@@ -111,7 +112,7 @@
         <div>Im: [[stackIndex]]/[[stackMaxIndex]]</div>
       </div>
       <div id="bottomRight" class="bottom right information">
-        <div>Study Date: March 12, 2016</div>
+        <div>Study Date: <moment-element datetime="[[studyDate]]" output-format="MMM DD[,] YYYY"></moment-element></div>
       </div>
     </div>
 
@@ -181,6 +182,9 @@
             type: String,
           },
           patientBirthdate: {
+            type: String,
+          },
+          studyDate: {
             type: String,
           },
           studyDescription: {
@@ -376,6 +380,7 @@
       resize() {
         if (
           this.stackHelper &&
+          this.stackHelper.slice &&
           this._container &&
           this._container.clientWidth > 0) {
           const width = this._container.clientWidth;
