--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -307,13 +307,16 @@
         <control-panel-2d
           hidden$="[[activeBch]]"
           collapse="{{collapse}}"
-          stack-helper="{{stackHelperGe}}"
-          stack-index="{{stackIndexGE}}"
-          stack-max-index="{{stackMaxIndexGE}}"
-          orientation="{{orientationGE}}"
-          stack-orientation="{{stackOrientationIndexGE}}"
-          stack-window-width="{{stackWindowWidthGE}}"
-          stack-window-center="{{stackWindowCenterGE}}"></control-panel-2d>
+          index="{{stackIndexGe}}"
+          interpolation="{{stackInterpolationGe}}"
+          intensity-auto="{{stackIntensityAutoGe}}"
+          intensity-min="[[stackIntensityMinGe]]"
+          intensity-max="[[stackIntensityMaxGe]]"
+          intensity-range="[[stackIntensityRangeGe]]"
+          max-index="[[stackMaxIndexGe]]"
+          orientation="{{orientationGe}}"
+          window-width="{{stackWindowWidthGe}}"
+          window-center="{{stackWindowCenterGe}}"></control-panel-2d>
       </div>
 
       <div class="viewersC">
@@ -361,22 +364,24 @@
             </div>
           </div>
           <paper-slider
-            value="{{stackIndexGE}}"
-            immediate-value="{{stackIndexGE}}"
+            value="{{stackIndexGe}}"
+            immediate-value="{{stackIndexGe}}"
             min="0"
-            max="[[stackMaxIndexGE]]"
+            max="[[stackMaxIndexGe]]"
             editable></paper-slider>
           <ami-viewer-2d
             id="render2"
             class="viewers"
             active="{{activeGe}}"
             stack-scene="[[stackSceneGe]]"
-            stack-index="{{stackIndexGE}}"
-            stack-max-index="[[stackMaxIndexGE]]"
-            orientation="{{orientationGE}}"
-            stack-orientation="{{stackOrientationIndexGE}}"
-            stack-window-width="[[stackWindowWidthGE]]"
-            stack-window-center="[[stackWindowCenterGE]]"></ami-viewer-2d>
+            stack-index="{{stackIndexGe}}"
+            stack-max-index="{{stackMaxIndexGe}}"
+            orientation="{{orientationGe}}"
+            stack-orientation="{{stackOrientationIndexGe}}"
+            stack-window-width="{{stackWindowWidthGe}}"
+            stack-window-center="{{stackWindowCenterGe}}"
+            intensity-auto="[[stackIntensityAutoGe]]"
+            interpolation="[[stackInterpolationGe]]"></ami-viewer-2d>
         </div>
       </div>
     </div>
@@ -517,6 +522,49 @@
           stackInterpolationBch: {
             type: Boolean,
             observer: '_stackInterpolationBchChanged',
+          },
+          stackIndexGe: {
+            type: Number,
+            value: 0,
+            observer: '_stackIndexGeChanged',
+          },
+          stackMinIndexGe: {
+            type: Number,
+            value: 0,
+          },
+          stackMaxIndexGe: {
+            type: Number,
+            value: 0,
+          },
+          stackIntensityMinGe: {
+            type: Number,
+            value: 0,
+          },
+          stackIntensityMaxGe: {
+            type: Number,
+            value: 0,
+          },
+          stackIntensityRangeGe: {
+            type: Number,
+            value: 0,
+          },
+          stackWindowWidthGe: {
+            type: Number,
+            value: 0,
+            observer: '_stackWindowWidthGeChanged',
+          },
+          stackWindowCenterGe: {
+            type: Number,
+            value: 0,
+            observer: '_stackWindowCenterGeChanged',
+          },
+          stackIntensityAutoGe: {
+            type: Boolean,
+            observer: '_stackIntensityAutoGeChanged',
+          },
+          stackInterpolationGe: {
+            type: Boolean,
+            observer: '_stackInterpolationGeChanged',
           },
         };
       }
@@ -794,6 +842,7 @@
             this.$.render.patientID = series.patientID;
             this.$.render.patientAge = series.patientAge;
             this.$.render.patientBorthdate = series.patientBorthdate;
+            this.$.render.studyDate = series.studyDate;
             this.$.render.studyDescription = series.studyDescription;
             this.$.render.seriesDescription = series.seriesDescription;
 
@@ -978,6 +1027,11 @@
         return `${baseClass} ${activeClass}`;
       }
 
+      /**
+       * Stack helper Bch changed
+       *
+       * @param {*} stackHelper
+       */
       _stackHelperBchChanged(stackHelper) {
         this._stackHelperChanged(stackHelper, 'Bch');
       }
@@ -1025,6 +1079,10 @@
         this._stackIndexChanged('Bch', index);
       }
 
+      _stackIndexGeChanged(index) {
+        this._stackIndexChanged('Ge', index);
+      }
+
       _stackIndexChanged(target, index) {
         const stackHelper = this[`stackHelper${target}`];
         if (index === undefined ||
@@ -1056,6 +1114,10 @@
         this._stackWindowWidthChanged('Bch', windowWidth);
       }
 
+      _stackWindowWidthGeChanged(windowWidth) {
+        this._stackWindowWidthChanged('Ge', windowWidth);
+      }
+
       _stackWindowWidthChanged(target, windowWidth) {
         const stackHelper = this[`stackHelper${target}`];
         if (windowWidth === undefined ||
@@ -1077,6 +1139,10 @@
         this._stackWindowCenterChanged('Bch', windowCenter);
       }
 
+      _stackWindowCenterGeChanged(windowCenter) {
+        this._stackWindowCenterChanged('Ge', windowCenter);
+      }
+
       _stackWindowCenterChanged(target, windowCenter) {
         const stackHelper = this[`stackHelper${target}`];
         if (windowCenter === undefined ||
@@ -1096,6 +1162,10 @@
        */
       _stackIntensityAutoBchChanged(auto) {
         this._stackIntensityAutoChanged('Bch', auto);
+      }
+
+      _stackIntensityAutoGeChanged(auto) {
+        this._stackIntensityAutoChanged('Ge', auto);
       }
 
       _stackIntensityAutoChanged(target, auto) {
@@ -1125,6 +1195,10 @@
        */
       _stackInterpolationBchChanged(interpolation) {
         this._stackInterpolationChanged('Bch', interpolation);
+      }
+
+      _stackInterpolationGeChanged(interpolation) {
+        this._stackInterpolationChanged('Ge', interpolation);
       }
 
       _stackInterpolationChanged(target, interpolation) {
