--- a/src/elements/css-loader.html
+++ b/src/elements/css-loader.html
@@ -7,7 +7,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
   <template>
     <style>
         :host {
-                display: block;
+        display: block;
         }
 
         .contain {
@@ -26,7 +26,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
             transform-origin: center;
         }
         svg:nth-of-type(1) ellipse {
-        stroke: #F1725D;
+        stroke: var(--accent-color);
         cx: 25px;
         stroke-width: 3px;
         -webkit-animation: jump 600ms infinite ease-in-out;
@@ -36,7 +36,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation-delay: 0ms;
         }
         svg:nth-of-type(2) ellipse {
-        stroke: #38BDAB;
+        stroke: var(--accent-color);
         cx: 65px;
         stroke-width: 3px;
         -webkit-animation: jump 600ms infinite ease-in-out;
@@ -46,7 +46,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation-delay: 75ms;
         }
         svg:nth-of-type(3) ellipse {
-        stroke: #9D30A5;
+        stroke: var(--accent-color);
         cx: 105px;
         stroke-width: 3px;
         -webkit-animation: jump 600ms infinite ease-in-out;
@@ -56,7 +56,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation-delay: 150ms;
         }
         svg:nth-of-type(4) ellipse {
-        stroke: #B779E2;
+        stroke: var(--accent-color);
         cx: 145px;
         stroke-width: 3px;
         -webkit-animation: jump 600ms infinite ease-in-out;
@@ -66,7 +66,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation-delay: 225ms;
         }
         svg:nth-of-type(5) ellipse {
-        stroke: #683893;
+        stroke: var(--accent-color);
         cx: 185px;
         stroke-width: 3px;
         -webkit-animation: jump 600ms infinite ease-in-out;
@@ -76,7 +76,7 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation-delay: 300ms;
         }
         svg:nth-of-type(6) ellipse {
-        fill: #333333;
+        fill: var(--accent-color);
         opacity: .05;
         rx: 0;
         ry: 0;
