--- a/src/elements/series-preview.html
+++ b/src/elements/series-preview.html
@@ -20,11 +20,11 @@
 
       .seriesPreview:hover {
         cursor: pointer;
-        background-color: var(--dark-primary-color);
+        border-color: #ffffff;
       }
 
       .seriesPreview[selected] {
-        border-color: #ccff00;
+        border-color: var(--accent-color);
       }
 
       img {
