--- a/src/gex-login.html
+++ b/src/gex-login.html
@@ -57,7 +57,7 @@
       paper-button#login {
         margin-top: 32px;
         background: var(--accent-color);
-        color: var(--secondary-text-color);
+        color: var(--primary-text-color);
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
