--- a/src/pacs-pull/gex-pacs-query.html
+++ b/src/pacs-pull/gex-pacs-query.html
@@ -127,10 +127,10 @@
                 <paper-input label="PACS Server Port" value="{{settings.server_port}}"></paper-input>
               </div>
               <div class="item">
-                <paper-input label="Calling AET" value="{{settings.aec}}"></paper-input>
+                <paper-input label="Called AET" value="{{settings.aec}}"></paper-input>
               </div>
               <div class="item">
-                <paper-input label="Called AET" value="{{settings.aet}}"></paper-input>
+                <paper-input label="Calling AET" value="{{settings.aet}}"></paper-input>
               </div>
             </iron-collapse>
           </section>
