--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -34,7 +34,7 @@
         -webkit-box-flex: 1;
             -ms-flex: 1;
                 flex: 1;
-        background-color: var(--default-primary-color);
+        background-color: var(--dark-primary-color);
         color: var(--text-primary-color);
         font-weight: lighter;
       }
@@ -61,7 +61,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: var(--light-primary-color);
+        background-color: var(--dark-primary-color);
         z-index: 2;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -132,7 +132,7 @@
       }
 
       .viewerui.active {
-        border-bottom-color: #ccff00;
+        border-bottom-color: var(--accent-color);
       }
 
       .series{
@@ -153,6 +153,10 @@
         color: var(--secondary-text-color);
       }
 
+      .panel.bch {
+        border-right: 1px solid var(--divider-color);
+      }
+
       .ge {
         max-height: 192px;
         overflow: hidden;
@@ -164,7 +168,7 @@
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: var(--light-primary-color);
+        background-color: var(--dark-primary-color);
         z-index: 2;
         display: -webkit-box;
         display: -ms-flexbox;
@@ -187,13 +191,13 @@
         background-color: #000000;
         --paper-slider-container-color: #424242;
         --paper-slider-active-color: #424242;
-        --paper-slider-knob-color: #ccff00;
+        --paper-slider-knob-color: var(--accent-color);
         --paper-slider-input: {width: 64px}
       }
 
       .viewHead {
         width: 100%;
-        background-color: var(--light-primary-color);
+        background-color: var(--dark-primary-color);
       }
 
       .illustration {
