--- a/src/elements/css-loader.html
+++ b/src/elements/css-loader.html
@@ -1,31 +1,35 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
 <!-- Credits:
+Joni Trythall 
+https://codepen.io/jonitrythall/
 https://codepen.io/jonitrythall/pen/dNJRRK
 -->
 <dom-module id="css-loader">
   <template>
     <style>
-        :host {
+      :host {
         display: block;
-        }
+      }
 
-        .contain {
+      .contain {
         position: relative;
         width: 200px;
         height: 80px;
         margin: auto;
-        }
+      }
 
-        svg {
+      svg {
         position: absolute;
-        }
-        svg ellipse {
+      }
+
+      svg ellipse {
         -webkit-transform-origin: center;
                 -ms-transform-origin: center;
             transform-origin: center;
-        }
-        svg:nth-of-type(1) ellipse {
+      }
+
+      svg:nth-of-type(1) ellipse {
         stroke: var(--accent-color);
         cx: 25px;
         stroke-width: 3px;
@@ -34,8 +38,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
         opacity: .7;
         -webkit-animation-delay: 0ms;
                 animation-delay: 0ms;
-        }
-        svg:nth-of-type(2) ellipse {
+      }
+
+      svg:nth-of-type(2) ellipse {
         stroke: var(--accent-color);
         cx: 65px;
         stroke-width: 3px;
@@ -44,8 +49,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
         opacity: .7;
         -webkit-animation-delay: 75ms;
                 animation-delay: 75ms;
-        }
-        svg:nth-of-type(3) ellipse {
+      }
+
+      svg:nth-of-type(3) ellipse {
         stroke: var(--accent-color);
         cx: 105px;
         stroke-width: 3px;
@@ -54,8 +60,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
         opacity: .7;
         -webkit-animation-delay: 150ms;
                 animation-delay: 150ms;
-        }
-        svg:nth-of-type(4) ellipse {
+      }
+
+      svg:nth-of-type(4) ellipse {
         stroke: var(--accent-color);
         cx: 145px;
         stroke-width: 3px;
@@ -64,8 +71,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
         opacity: .7;
         -webkit-animation-delay: 225ms;
                 animation-delay: 225ms;
-        }
-        svg:nth-of-type(5) ellipse {
+      }
+
+      svg:nth-of-type(5) ellipse {
         stroke: var(--accent-color);
         cx: 185px;
         stroke-width: 3px;
@@ -74,8 +82,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
         opacity: .7;
         -webkit-animation-delay: 300ms;
                 animation-delay: 300ms;
-        }
-        svg:nth-of-type(6) ellipse {
+      }
+
+      svg:nth-of-type(6) ellipse {
         fill: var(--accent-color);
         opacity: .05;
         rx: 0;
@@ -86,8 +95,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation: shadow 600ms infinite ease-in-out;
         -webkit-animation-delay: 0ms;
                 animation-delay: 0ms;
-        }
-        svg:nth-of-type(7) ellipse {
+      }
+
+      svg:nth-of-type(7) ellipse {
         fill: #333333;
         opacity: .05;
         rx: 0;
@@ -98,8 +108,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation: shadow 600ms infinite ease-in-out;
         -webkit-animation-delay: 75ms;
                 animation-delay: 75ms;
-        }
-        svg:nth-of-type(8) ellipse {
+      }
+
+      svg:nth-of-type(8) ellipse {
         fill: #333333;
         opacity: .05;
         rx: 0;
@@ -110,8 +121,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation: shadow 600ms infinite ease-in-out;
         -webkit-animation-delay: 150ms;
                 animation-delay: 150ms;
-        }
-        svg:nth-of-type(9) ellipse {
+      }
+
+      svg:nth-of-type(9) ellipse {
         fill: #333333;
         opacity: .05;
         rx: 0;
@@ -122,8 +134,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation: shadow 600ms infinite ease-in-out;
         -webkit-animation-delay: 225ms;
                 animation-delay: 225ms;
-        }
-        svg:nth-of-type(10) ellipse {
+      }
+
+      svg:nth-of-type(10) ellipse {
         fill: #333333;
         opacity: .05;
         rx: 0;
@@ -134,9 +147,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 animation: shadow 600ms infinite ease-in-out;
         -webkit-animation-delay: 300ms;
                 animation-delay: 300ms;
-        }
+      }
 
-        @-webkit-keyframes jump {
+      @-webkit-keyframes jump {
         40% {
                 -webkit-transform: translateY(20px) scale(1.3);
                         transform: translateY(20px) scale(1.3);
@@ -156,9 +169,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 rx: 10px;
                 ry: 10px;
         }
-        }
+      }
 
-        @keyframes jump {
+      @keyframes jump {
         40% {
                 -webkit-transform: translateY(20px) scale(1.3);
                         transform: translateY(20px) scale(1.3);
@@ -178,8 +191,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 rx: 10px;
                 ry: 10px;
         }
-        }
-        @-webkit-keyframes shadow {
+      }
+
+      @-webkit-keyframes shadow {
         45% {
                 opacity: .15;
                 rx: 10px;
@@ -187,8 +201,9 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 -webkit-transform: translateY(5px) scale(1.3);
                         transform: translateY(5px) scale(1.3);
         }
-        }
-        @keyframes shadow {
+      }
+      
+      @keyframes shadow {
         45% {
                 opacity: .15;
                 rx: 10px;
@@ -196,50 +211,50 @@ https://codepen.io/jonitrythall/pen/dNJRRK
                 -webkit-transform: translateY(5px) scale(1.3);
                         transform: translateY(5px) scale(1.3);
         }
-        }
+      }
     </style>
 
     <div class='contain'>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
-    <svg height='80' width='210'>
-        <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
-    </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
+        <svg height='80' width='210'>
+                <ellipse cx='25' cy='20' fill='none' rx='10' ry='10'></ellipse>
+        </svg>
     </div>
 
   </template>
 
   <script>
-    class CssLoader extends Polymer.Element {
+    class CssLoaderBounce extends Polymer.Element {
       static get is() {
         return 'css-loader';
       }
     }
-    window.customElements.define(CssLoader.is, CssLoader);
+    window.customElements.define(CssLoaderBounce.is, CssLoaderBounce);
   </script>
 </dom-module>
