--- a/src/gex-app.html
+++ b/src/gex-app.html
@@ -66,6 +66,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-color: var(--primary-text-color);  
         --paper-input-container-input-color: var(--primary-text-color);  
 
+        --paper-progress-active-color: var(--accent-color);
+        --paper-progress-secondary-color: var(--accent-color);
+
         position: absolute;
         top: 0;
         bottom: 0;
