--- a/src/gex-home.html
+++ b/src/gex-home.html
@@ -619,18 +619,29 @@
           token: sessionStorage.getItem('token'),
         };
         //
+        const settings = {
+          aet: 'CHIPS',
+          aec: 'ORTHANC',
+          server_ip: '192.168.1.40',
+          server_port: '4242',
+        };
+
         data.body = {};
         data.body.template = {};
-        // the prefix:
         data.body.template.data = [
-          {name: 'prefix', value: ''},
-          {name: 'sleep', value: ''},
+          {name: 'aet', value: ''},
+          {name: 'aec', value: ''},
+          {name: 'server_ip', value: ''},
+          {name: 'server_port', value: ''},
+          {name: 'series_file', value: ''},
+          {name: 'series_uids', value: ''},
           {name: 'previous_id', value: ''},
         ];
-        data.body.data = {};
-        data.body.data['prefix'] = 'ge';
-        data.body.data['sleep'] = '10';
+
+        data.body.data = settings;
         data.body.data['previous_id'] = this.previousInstance.data.id;
+        data.body.data['series_file'] = '/ge-demo/normative-moco.txt';
+        data.body.data['series_uids'] = '0';
 
         this.$.API.handleAs = 'json';
         const start = this.__startPlugin(this.$.API, this.geLink, data);
